@@ -1,38 +1,41 @@
 package com.example.demo.hotspot;
 
-import com.example.demo.hotspot.dto.HotspotItemDto;
-import com.example.demo.hotspot.dto.HotspotListDto;
+import com.example.demo.hotspot.dto.*;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class HotspotService {
-
     private final HotspotRepository repo;
-
     public HotspotService(HotspotRepository repo) { this.repo = repo; }
 
-    public HotspotListDto searchInBBox(double west, double south, double east, double north,
-                                       Integer year, String order, Integer limit) {
+    public HotspotListDto searchInBBox(
+            double west, double south, double east, double north,
+            Integer year, String order, int limit
+    ) {
+        Sort sort = "casualties".equalsIgnoreCase(order)
+                ? Sort.by(Sort.Direction.DESC, "casualties")
+                : Sort.by(Sort.Direction.DESC, "accidents");
 
-        List<HotspotEntity> raw = repo.findInBBox(west, south, east, north, year);
-        long total = raw.size();
+        int size = Math.min(Math.max(limit, 1), 500);
+        Pageable pageable = PageRequest.of(0, size, sort);
 
-        Comparator<HotspotEntity> cmp =
-                "casualties".equalsIgnoreCase(order)
-                        ? Comparator.comparingInt(HotspotEntity::getCasualties).reversed()
-                        : Comparator.comparingInt(HotspotEntity::getAccidents).reversed();
+        long total = repo.countInBBox(west, south, east, north, year);
 
-        List<HotspotItemDto> items = raw.stream()
-                .sorted(cmp)
-                .limit(limit == null ? 200 : limit)
+        List<HotspotItemDto> items = repo.findInBBox(west, south, east, north, year, pageable)
+                .stream()
                 .map(h -> new HotspotItemDto(
-                        h.getId(), h.getName(), h.getLat(), h.getLng(),
-                        h.getAccidents(), h.getCasualties(), h.getStatYear()))
-                .collect(Collectors.toList());
+                        "HS_" + h.getId(),
+                        h.getName(),
+                        h.getLat(),
+                        h.getLng(),
+                        h.getAccidents(),
+                        h.getCasualties(),
+                        h.getStatYear()
+                ))
+                .toList();
 
         return new HotspotListDto(total, items);
     }
